# django-copygram

./: .gitignore  LICENSE  README.md  common.yaml  compose.dev.yaml  compose.yaml
.github/workflows/: main.yml
backend/: .gitignore  Dockerfile  entrypoint.dev.sh  entrypoint.sh  pyproject.toml  requirements.txt
backend/blogs/: admin.py  documents.py  filters.py  forms.py  managers.py  mixins.py  models.py  permissions.py  signals.py  similarities.py  tasks.py  tests.py  urls.py  utils.py
backend/blogs/api/: serializers.py  views.py
backend/blogs/management/commands/: generate_comments.py  generate_likes.py  generate_posts.py  generate_saved.py  migration.py  reminder.py
backend/blogs/migrations/: 0001_initial.py  0002_uninterestingpost.py  0003_uninterestingpost_unique_uninteresting_post.py  0004_alter_post_options.py  0005_alter_comment_options_alter_post_options_and_more.py  0006_alter_post_likes_alter_post_saved.py  0007_alter_post_likes_alter_post_saved.py
backend/blogs/static/blogs/js/: post.js
backend/blogs/templates/blogs/: archived_post.html  create_post.html  create_story.html  edit_post.html  post.html  posts.html  stories_archive.html
backend/blogs/views/: archive.py  posts.py  stories.py
backend/chats/: admin.py  consumers.py  forms.py  managers.py  mixins.py  models.py  permissions.py  routing.py  tests.py  urls.py
backend/chats/api/: serializers.py  views.py
backend/chats/migrations/: 0001_initial.py  0002_alter_message_options_alter_roomchat_options_and_more.py  0003_remove_privatechat_first_user_and_more.py  0004_alter_groupchat_image.py  0005_alter_groupchat_image.py  0006_alter_groupchat_image_alter_groupchat_owner.py  0007_alter_groupchat_image.py
backend/chats/static/chats/js/: chat.js
backend/chats/templates/chats/: chat.html  create_group.html  edit_group.html  groups.html  private_chats.html
backend/chats/views/: groups.py  private.py
backend/common/: __init__.py  conf.py  serializers.py  utils.py  viewsets.py
backend/common/database/: rec_by_comments.sql  rec_by_follows.sql  rec_by_likes.sql  rec_by_saved.sql
backend/common/fakes/: comms.sh  follows.sh  likes.sh  posts.sh  saved.sh  users.sh
backend/copygram/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/templates/: base.html  default_form.html  info_page.html
backend/templates/admin/: base.html
backend/users/: admin.py  authentication.py  context_processors.py  documents.py  forms.py  managers.py  middleware.py  mixins.py  models.py  permissions.py  pipeline.py  recommendations.py  signals.py  tasks.py  tests.py  urls.py  utils.py  validators.py
backend/users/api/: mixins.py  serializers.py  views.py
backend/users/management/commands/: generate_follows.py  generate_users.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_follower_self_following.py  0004_alter_user_gender_alter_userprivacy_comments_and_more.py  0005_rename_contentpreferences_contentpreference.py  0006_alter_user_options_and_more.py  0007_unintrestingpost_delete_contentpreference.py  0008_uninterestingpost_delete_unintrestingpost.py  0009_delete_uninterestingpost.py  0010_useractivity.py  0011_useractivity_session_time.py  0012_userdayactivity.py  0013_remove_action_unread.py  0014_remove_block_unique_blocking_and_more.py  0015_delete_archive.py  0016_alter_action_options_alter_referral_options_and_more.py  0017_alter_useractivity_options_and_more.py  0018_alter_user_avatar.py  0019_alter_report_report_from_alter_user_avatar.py
backend/users/static/users/js/: actions.js  followers.js  profile.js  recommend.js
backend/users/templates/users/: actions.html  activity.html  blocked.html  change_password.html  create_report.html  disable_fa.html  edit_profile.html  enable_fa.html  followers.html  login.html  password_reset.html  password_reset_confirm.html  password_user_confirm.html  profile.html  register.html  register_confirm.html  search.html  settings.html  two_auth.html
backend/users/views/: accounts.py  actions.py  auth.py  followers.py
nginx/: default.conf.template
